fix desktop portfolio spacing

--- a/main.css
+++ b/main.css
@@ -77,6 +77,10 @@ body {
     box-shadow: 0px 0px 2px #333 inset;
 }
 
+figure {
+    margin: 20px;
+}
+
 /* Ensure minimum size on larger screens */
 @media only screen and (min-width: 350px) {
     #contact {
